# E03P02_RI_NEA_SMS

./: E03P02_RI_NEA_SMS_MP4.txt
install/: local_setup.sh  setup.sh
install/E03P02_RI_SMS_NEA/lib/E03P02_RI_SMS_NEA/: dxf_parser  forward_kinematics  inverse_kinematics  joint_state_bridge  path_publisher  test_movement  (+1 more)
install/E03P02_RI_SMS_NEA/share/E03P02_RI_SMS_NEA/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/E03P02_RI_SMS_NEA/share/E03P02_RI_SMS_NEA/launch/: complete_system.launch.py  robot_visualization.launch.py
install/E03P02_RI_SMS_NEA/share/E03P02_RI_SMS_NEA/model/: RRP.urdf.xacro
log/: latest_build
src/E03P02_RI_SMS_NEA/: setup.cfg  setup.py
src/E03P02_RI_SMS_NEA/CAD/: WAYPOINT.dxf
src/E03P02_RI_SMS_NEA/E03P02_RI_SMS_NEA/: cad_to_execution.py  dxf_parser.py  forward_kinematics.py  inverse_kinematics.py  joint_state_bridge.py  path_publisher.py  test_movement.py  trajectory_planner.py
src/E03P02_RI_SMS_NEA/launch/: complete_system.launch.py
src/E03P02_RI_SMS_NEA/model/: RRP.urdf.xacro
src/launch_pkg_nea/: package.xml  setup.cfg  setup.py
src/modelrobot_pkg_nea/: package.xml  setup.cfg  setup.py
src/modelrobot_pkg_nea/launch/: robot_launch_nea.launch.py
src/modelrobot_pkg_nea/model/: robot_car_nea.urdf.xacro  rviz_config.rviz
src/turtle_move_pkg_nea/: package.xml  setup.cfg  setup.py
src/turtle_move_pkg_nea/turtle_move_pkg_nea/: turtle_move_node_nea.py
src/twist2tf2_pkg_nea/: package.xml  setup.cfg  setup.py
src/twist2tf2_pkg_nea/twist2tf2_pkg_nea/: twist2tf2_node_nea.py
(+31 files in other folders)
